--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   },
   "homepage": "https://github.com/alphapoint/coinslot#readme",
   "devDependencies": {
-    "jest": "^22.3.0"
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.2.2",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "jest": "^22.3.0",
+    "regenerator-runtime": "^0.11.1"
   }
 }
