--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,16 @@
 {
   "presets": [
-    "es2015"
+    [
+      "env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": ["last 5 versions"]
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    "external-helpers"
   ]
 }
