--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "bchaddrjs": "^0.2.0",
     "ethereum-address": "0.0.4",
-    "jssha": "^2.3.1"
+    "jssha": "^2.3.1",
+    "ripple-address-codec": "^2.0.1"
   }
 }
