added support for iota using heavy library

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "bchaddrjs": "^0.2.0",
     "ethereum-address": "0.0.4",
+    "iota.lib.js": "^0.4.7",
     "jssha": "^2.3.1",
     "ripple-address-codec": "^2.0.1"
   }
