--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup-plugin-babel-minify": "^4.0.0",
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-filesize": "^1.5.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.0.3"
   },
   "dependencies": {
