--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.56.2",
     "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-babel-minify": "^4.0.0",
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-filesize": "^1.5.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.1.0",
-    "rollup-plugin-node-resolve": "^3.0.3"
+    "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "dependencies": {
     "base32.js": "^0.1.0",
