--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "jest": "^22.4.4",
+    "lodash": "^4.17.11",
     "randomatic": "^3.1.1",
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.56.2",
